--- a/package.json
+++ b/package.json
@@ -1,7 +1,16 @@
 {
   "name": "fari-directus-parser",
   "version": "1.0.1",
-  "main": "index.js",
+  "description": "A parser for Directus data.",
+  "main": "dist/index.js",
+  "module": "dist/index.mjs",
+  "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "require": "./dist/index.js",
+      "import": "./dist/index.mjs"
+    }
+  },
   "scripts": {
     "build": "tsc",
     "prepare": "npm run build",
@@ -11,16 +20,19 @@
     "prettier": "prettier --write .",
     "format:full": "eslint . --fix && prettier --write ."
   },
-  "keywords": [],
-  "author": "",
+  "keywords": ["directus", "parser"],
+  "author": "Mosa",
   "license": "ISC",
-  "description": "",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/FARI-brussels/fari-directus-parser.git"
+  },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
     "@types/jest": "^29.5.14",
     "eslint": "^9.13.0",
     "globals": "^15.11.0",
-    "prettier": "3.3.3",
+    "prettier": "^3.3.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.12.2"
