--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fari-directus-parser",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "A parser for Directus data.",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
@@ -20,7 +20,10 @@
     "prettier": "prettier --write .",
     "format:full": "eslint . --fix && prettier --write ."
   },
-  "keywords": ["directus", "parser"],
+  "keywords": [
+    "directus",
+    "parser"
+  ],
   "author": "Mosa",
   "license": "ISC",
   "repository": {
