--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
     "moduleResolution":"node",
     "outDir": "./dist",
     "rootDir": "./src",
-    "types": ["node"] // Add this line
+    "types": ["node"]
   },
   "include": ["src"],
   "exclude": ["node_modules", "dist"]
