--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fari-directus-parser",
-  "version": "1.0.65",
+  "version": "1.0.66",
   "description": "A parser for Directus data.",
   "repository": {
     "type": "git",
@@ -19,7 +19,7 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsc",
+    "build": "tsup src/index.ts",
     "prepare": "npm run build",
     "format": "npx prettier . --check",
     "lint": "eslint .",
@@ -40,6 +40,7 @@
     "globals": "^15.11.0",
     "prettier": "^3.3.3",
     "ts-node": "^10.9.2",
+    "tsup": "^8.3.5",
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.12.2"
   },
