--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,21 @@
 {
   "compilerOptions": {
-    "target": "esnext",
-    "module": "es6",
+    "target": "ESNext",
+    "module": "ESNext",
     "strict": true,
     "declaration": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
+    "noImplicitReturns": true,
     "forceConsistentCasingInFileNames": true,
     "moduleResolution":"node",
+    "sourceMap": true,
+    "resolveJsonModule": true,
+    "removeComments": true,
     "outDir": "./dist",
-    "rootDir": "./src",
-    "types": ["node"]
+    "rootDir": "./",
+    "types": ["node"],
   },
-  "include": ["src"],
+  "include": ["src", "./tsup.config.ts"],
   "exclude": ["node_modules", "dist"]
 }
